welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:15: warning: enclosing method finale has result type Unit: return value discarded
    return resultat
    ^SnakeBuggle:28: error: type mismatch;
 found   : Unit
 required: Boolean
  while(finale()){serpent()}
              ^