welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  
  def finale(){
    var resultat:Boolean = false
    if(getDirection()==Direction.EST){
      gauche();
      resultat = estFaceMur();
      droite()
     }
    else if (getDirection()==Direction.OUEST){
      droite();
      resultat = estFaceMur();
      gauche()
    }
    return resultat
  }
  
  
  def serpent(){
    if(estFaceMur()){
      if(getDirection() == Direction.EST){gauche();avance();gauche();}
      else{droite();avance();droite();}
    }
    else{avance();}
  }
  
  
  while(finale()){serpent()}
  
  
}